--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Beer[fi]nder</h1>
+<!-- navbar fixed on top -->
+<div class="container">
+<nav id= navbar-top class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid container">
+        <a class="navbar-brand" href="#">Beer[fi]nder</a>
+    </div>
+</nav>
+</div>
+<!-- end of navbar-->
+
+
         <!-- Searcher for the beer word -->
+            <div class="container"><br><br>
+            
         <div class="row">
             <div class="col-xs-12  col-lg-12">
                 <div id="jumbofinder">
@@ -61,6 +72,13 @@
             </div>
         </div>
     </div>
+    <footer>
+            <div id="bottom-bar" class="navbar-fixed-bottom">
+                <div class="container">
+                    <p>&copy;2017 Beer[fi]nder, all rights reserved · Made by <a href="https://twitter.com/SergioCodeWorld">Sergio MT</a></p>
+                </div>
+            </div>
+            </footer>
     <!-- End of Snippet -->
     <!-- jquery load -->
     <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
